# heronai-ar-aging-dashboard

./: .gitignore  .vercelignore  ARCHITECTURE.md  Procfile  README.md  backup.sql  dagster_cloud.yaml  dagster_cloud_build.yaml  pyproject.toml  requirements.txt  runtime.txt  test_unified_api.py  vercel.json  workspace.yaml
.github/workflows/: branch_deployments.yml  deploy-dagster.yml  deploy.yml
.tmp_dagster_home_3j67wyyi/history/: runs.db
.tmp_dagster_home_3j67wyyi/history/runs/: 5afe5770-8c22-4497-ad8e-a532f431a769.db  index.db  (+5 more)
.tmp_dagster_home_3j67wyyi/schedules/: schedules.db
.tmp_dagster_home_smikaad7/history/: runs.db
.tmp_dagster_home_smikaad7/schedules/: schedules.db
.tmp_dagster_home_smikaad7/storage/: raw_customers  raw_transactions  transformed_customers  transformed_invoices  transformed_transactions
ar_dashboard/: apps.py  models.py  urls.py  views.py
ar_dashboard/migrations/: 0001_initial.py
config/: settings.py  urls.py
dagster_pipeline/: .gitignore  __init__.py  assets.py  definitions.py  repository.py  test_dagster_pipeline.py
dagster_storage/: raw_invoices  transformed_invoices
data/: all_transactions.json  ar_aging_report.json  customer_ar_summary.json  customer_invoices.json  customers.json  outstanding_invoices.json  paid_invoices.json  payments.json  suppliers.json
heronai_ar_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: base.html  vercel.json
templates/ar_dashboard/: dashboard.html  demo_mode.html  filtered_dashboard.html  table_view.html  widget_dashboard.html
(+43 files in other folders)
